<resources>
    <string name="app_name">My Application</string>
    <string name="shutter">Shutter</string>
    <string name="undo">Undo</string>
    <string name="back">Back</string>
    <string name="cropping">Cropping</string>
    <string name="greying">Greying</string>
    <string name="coloring">Coloring</string>
    <string name="finish">Finish</string>
    <string name="to_camera">To camera</string>
</resources>
